fixed some issue

--- a/css/project.css
+++ b/css/project.css
@@ -50,7 +50,7 @@
     display: inline-block;
     margin: 1rem;
     padding: 1rem 2.8rem;
-    width: 200px;
+    width: 20rem;
     background-color: #00ffee;
     box-shadow: 0 0 25px var(--main-color);
     border-radius: 4rem;
@@ -60,7 +60,7 @@
     letter-spacing: 0.1rem;
     font-weight: 600;
     transition: 0.3s ease-in-out;
-    
+    text-align: center;
 }
 
 .btn2:hover{
