--- a/css/media_queries.css
+++ b/css/media_queries.css
@@ -195,3 +195,36 @@
     }
 }
 
+@media (max-width: 311px) {
+    html {
+        font-size:30% ;
+    }
+
+    .project_img img{
+        width: 100px;
+        height: 100px;
+    }
+ 
+    .home_content h1 {
+        font-size: 4rem;
+        font-weight: 700;
+        margin-top: 1rem;
+        line-height: 1;
+    }
+    
+    .home_content h3 {
+        display: none;
+    }
+    
+    .home_content p {
+        font-size: 1.5rem;
+        font-weight: 500;
+        line-height: 1.8;
+        max-width: 150px;
+    }
+
+    .home_img img {
+        top: 1rem;
+    }
+
+}
